card styling start

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="navBar">
         <div class="logo">
-            <a href="#"><img src="./img/logo.png" alt=""></a>
+            <a href="#"><img src="./img/" alt=""></a>
         </div>
         <div class="search">
             <select name="" id="brand">
@@ -17,6 +17,57 @@
                 <option value="iphone">iphone</option>
                 <option value="oppo">oppo</option>
             </select>
+        </div>
+    </div>
+    <div class="chooseBrand">
+        <h2>Choose By Brand</h2>
+        <div class="hero">
+            
+            <div class="styles_singlePhone">
+                <div class="style_front">
+                    <img src="./img/hero/iphone-12 hero.webp" alt="">
+                </div>
+                <div class="style_back">
+                    <img src="./img/hero/iphone-12-pro_gold_back.webp" alt="" id="rotate">
+                </div>
+                <h1>Iphone</h1>
+            </div>
+            <div class="styles_singlePhone">
+                <div class="style_front">
+                    <img src="./img/hero/samsung front.webp" alt="" >
+                </div>
+                <div class="style_back">
+                    <img src="./img/hero/samsung back.webp" alt="" id="rotate">
+                </div>
+                <h1>Samsung</h1>
+            </div>
+            <div class="styles_singlePhone" >
+                <div class="style_front">
+                    <img src="./img/hero/moto front.webp" alt="">
+                </div>
+                <div class="style_back">
+                    <img src="./img/hero/moto back.webp" alt="" id="rotate">
+                </div>
+                <h1>Motorola</h1>
+            </div>
+            <div class="styles_singlePhone">
+                <div class="style_front">
+                    <img src="./img/hero/google frony.webp" alt="">
+                </div>
+                <div class="style_back">
+                    <img src="./img/hero/google back.webp" alt="" id="rotate">
+                </div>
+                <h1>Google</h1>
+            </div>
+            <div class="styles_singlePhone">
+                <div class="style_front">
+                    <img src="./img/hero/acatel front.webp" alt="">
+                </div>
+                <div class="style_back">
+                    <img src="./img/hero/acatel back.webp" alt="" id="rotate">
+                </div>
+                <h1>AIcatel</h1>
+            </div>
         </div>
     </div>
     <div id="container" >
